<resources>
    <string name="app_name">SQLite Database Learning</string>
    <string name="etNameHint">Name</string>
    <string name="etEmailHint">Email</string>
    <string name="etAdditionHint">Addition</string>
    <string name="etIdHint">Id</string>

    <string name="btnAddCaption">Add</string>
    <string name="btnReadCaption">Read</string>
    <string name="btnClearCaption">Clear</string>
</resources>
